# ground-up-ml

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_benchmarks.py
.github/workflows/: ci.yml
data/loaders/: boston_loader.py
mini_projects/01_simple_linear_regression/: notebook.ipynb
mini_projects/01_simple_linear_regression/from_scratch/: slr.py  slr_FromScratch.py
mini_projects/01_simple_linear_regression/pytorch_impl/: slr_Pytorch.py  slr_pytorch.py
mini_projects/01_simple_linear_regression/sklearn_impl/: slr_Sklearn.py  slr_sklearn.py
mlruns/0/: meta.yaml
scripts/: run_slr_experiment.py  run_slr_experiment.py:Zone.Identifier
shared_utils/: dispatcher.py  metrics.py  mlflow_logger.py  report.py  utils.py  visualizations.py
src/cli/: cli.py  prompt_user.py
src/config/: default_benchmark.json  defaults.py
src/core/: dispatcher.py  registry.py
src/core/metrics/: metrics.py
src/data/: generate_data.py
src/models/: ground_up_ml_base_model.py
src/shared_utils/: dispatcher.py  metrics.py
src/utils/: config.py  learning_rate.py  mlflow_logger.py  report.py  utils.py
src/visualizations/: visualizations.py
tests/: test_shared_utils.py
tests/cli/: test_cli.py  test_prompt_user.py
tests/core/: test_dispatcher.py  test_registry.py
tests/models/: test_slr_FromScratch.py  test_slr_Pytorch.py  test_slr_Sklearn.py
tests/utils/: test_report.py  test_utils.py
tests/visualizations/: test_visualizations.py
(+9 files in other folders)
