# pyproject.toml placeholder
[tool.black]
line-length = 88

[tool.isort]
profile = "black"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
jupyterlab = "^4.4.0"
ipykernel = "^6.29.5"
tqdm = "^4.67.1"

[project]
name = "ground-up-ml"
version = "0.1.0"
description = "A hands-on machine learning reboot from first principles to production-ready code. Compare pure Python, scikit-learn, and PyTorch implementations side-by-side as you build intuition and expertise from the ground up."
authors = [
    {name = "Will Thurston "}
]
package-mode = false
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.6.0,<3.0.0)",
    "mlflow (>=2.21.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
